[gd_scene load_steps=17 format=1]

[ext_resource path="res://rcos_core/looks/prototype/theme.tres" type="Theme" id=1]
[ext_resource path="res://modules/remote_connector/identify_device_dialog.gd" type="Script" id=2]
[ext_resource path="res://rcos_core/fonts/teko/bitmap/teko-regular-22.fnt" type="BitmapFont" id=3]
[ext_resource path="res://rcos_core/fonts/teko/bitmap/teko-regular-16.fnt" type="BitmapFont" id=4]
[ext_resource path="res://rcos_core/lib/scroller_container.tscn" type="PackedScene" id=5]
[ext_resource path="res://rcos_core/lib/scroller_input_area.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.199219, 0.199219, 0.199219, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 2
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="Theme" id=10]

HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_hilite = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_hilite = null
HScrollBar/styles/grabber = SubResource( 2 )
HScrollBar/styles/grabber_hilite = SubResource( 3 )
HScrollBar/styles/scroll = SubResource( 4 )
HScrollBar/styles/scroll_focus = SubResource( 5 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_hilite = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_hilite = null
VScrollBar/styles/grabber = SubResource( 6 )
VScrollBar/styles/grabber_hilite = SubResource( 7 )
VScrollBar/styles/scroll = SubResource( 8 )
VScrollBar/styles/scroll_focus = SubResource( 9 )

[node name="identify_device_dialog" type="ColorFrame"]

visibility/self_opacity = 0.9
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 400.0
color = Color( 0, 0, 0, 1 )
script/script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 31.0
margin/top = 30.0
margin/right = 167.0
margin/bottom = 52.0
custom_fonts/font = ExtResource( 3 )
text = "Which device is this?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="device_address_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 9.0
margin/right = 195.0
margin/bottom = 21.0
text = "(address)"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 89.0
margin/right = 135.0
margin/bottom = 106.0
custom_fonts/font = ExtResource( 4 )
text = "Known devices:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="devices_panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 108.0
margin/right = 180.0
margin/bottom = 280.0
custom_styles/panel = SubResource( 1 )

[node name="devices_scroller" parent="devices_panel" instance=ExtResource( 5 )]

theme/theme = SubResource( 10 )
margin/left = 2.0
margin/top = 2.0
margin/right = 2.0
margin/bottom = 2.0

[node name="devices_list" type="VBoxContainer" parent="devices_panel/devices_scroller"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 1
alignment = 0

[node name="scroller_input_area" parent="devices_panel/devices_scroller" instance=ExtResource( 6 )]

[node name="add_device_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 23.0
margin/top = 287.0
margin/right = 180.0
margin/bottom = 312.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Add Device"
flat = false

[node name="cancel_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 23.0
margin/top = 317.0
margin/right = 180.0
margin/bottom = 342.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false


